--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -49,8 +49,8 @@ body:
         - OpenTelemetry.PersistentStorage.Abstractions
         - OpenTelemetry.PersistentStorage.FileSystem
         - OpenTelemetry.ResourceDetectors.AWS
-        - OpenTelemetry.ResourceDetectors.Container
         - OpenTelemetry.Resources.Azure
+        - OpenTelemetry.Resources.Container
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Host
         - OpenTelemetry.Resources.Process
