--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -48,8 +48,8 @@ body:
         - OpenTelemetry.Instrumentation.Wcf
         - OpenTelemetry.PersistentStorage.Abstractions
         - OpenTelemetry.PersistentStorage.FileSystem
-        - OpenTelemetry.ResourceDetectors.AWS
         - OpenTelemetry.ResourceDetectors.Container
+        - OpenTelemetry.Resources.AWS
         - OpenTelemetry.Resources.Azure
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Host
