--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,8 @@ jobs:
           instrumentation-stackexchangeredis: ['*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**', 'examples/redis/**', '!**/*.md']
           instrumentation-wcf: ['*/OpenTelemetry.Instrumentation.Wcf*/**', 'examples/wcf/**', '!**/*.md']
           persistentstorage: ['*/OpenTelemetry.PersistentStorage*/**', '!**/*.md']
-          resourcedetectors-aws: ['*/OpenTelemetry.ResourceDetectors.AWS*/**', '!**/*.md']
           resourcedetectors-container: ['*/OpenTelemetry.ResourceDetectors.Container*/**', '!**/*.md']
+          resources-aws: ['*/OpenTelemetry.Resources.AWS*/**', '!**/*.md']
           resources-azure: ['*/OpenTelemetry.Resources.Azure*/**', '!**/*.md']
           resources-gcp: ['*/OpenTelemetry.Resources.Gcp*/**', '!**/*.md']
           resources-host: ['*/OpenTelemetry.Resources.Host*/**', '!**/*.md']
@@ -398,17 +398,6 @@ jobs:
       project-name: OpenTelemetry.PersistentStorage
       code-cov-name: PersistentStorage
 
-  build-test-resourcedetectors-aws:
-    needs: detect-changes
-    if: |
-      contains(needs.detect-changes.outputs.changes, 'resourcedetectors-aws')
-      || contains(needs.detect-changes.outputs.changes, 'build')
-      || contains(needs.detect-changes.outputs.changes, 'shared')
-    uses: ./.github/workflows/Component.BuildTest.yml
-    with:
-      project-name: Component[OpenTelemetry.ResourceDetectors.AWS]
-      code-cov-name: ResourceDetectors.AWS
-
   build-test-resourcedetectors-container:
     needs: detect-changes
     if: |
@@ -419,6 +408,17 @@ jobs:
     with:
       project-name: Component[OpenTelemetry.ResourceDetectors.Container]
       code-cov-name: ResourceDetectors.Container
+
+  build-test-resources-aws:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'resources-aws')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/Component.BuildTest.yml
+    with:
+      project-name: Component[OpenTelemetry.Resources.AWS]
+      code-cov-name: Resources.AWS
 
   build-test-resources-azure:
     needs: detect-changes
@@ -524,8 +524,8 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'instrumentation-runtime')
       || contains(needs.detect-changes.outputs.changes, 'instrumentation-sqlclient')
       || contains(needs.detect-changes.outputs.changes, 'instrumentation-stackexchangeredis')
-      || contains(needs.detect-changes.outputs.changes, 'resourcedetectors-aws')
       || contains(needs.detect-changes.outputs.changes, 'resourcedetectors-container')
+      || contains(needs.detect-changes.outputs.changes, 'resources-aws')
       || contains(needs.detect-changes.outputs.changes, 'resources-azure')
       || contains(needs.detect-changes.outputs.changes, 'resources-host')
       || contains(needs.detect-changes.outputs.changes, 'resources-process')
@@ -572,8 +572,8 @@ jobs:
       build-test-instrumentation-stackexchangeredis-integration,
       build-test-instrumentation-wcf,
       build-test-persistentstorage,
-      build-test-resourcedetectors-aws,
       build-test-resourcedetectors-container,
+      build-test-resources-aws,
       build-test-resources-azure,
       build-test-resources-gcp,
       build-test-resources-host,
