--- a/test/OpenTelemetry.Resources.Container.Tests/OpenTelemetry.Resources.Container.Tests.csproj
+++ b/test/OpenTelemetry.Resources.Container.Tests/OpenTelemetry.Resources.Container.Tests.csproj
@@ -7,7 +7,7 @@
     <Nullabe>enable</Nullabe>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' != '$(NetFrameworkMinimumSupportedVersion)'">
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <None Update="k8s\pod-response.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
