--- a/src/OpenTelemetry.SemanticConventions/OpenTelemetry.SemanticConventions.csproj
+++ b/src/OpenTelemetry.SemanticConventions/OpenTelemetry.SemanticConventions.csproj
@@ -6,6 +6,7 @@
     <PackageTags>$(PackageTags);semantic-conventions</PackageTags>
     <MinVerTagPrefix>SemanticConventions-</MinVerTagPrefix>
     <IsPackable>false</IsPackable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <!--Do not run Package Baseline Validation as this package has never released a stable version.
