--- a/test/OpenTelemetry.Instrumentation.Cassandra.Tests/OpenTelemetry.Instrumentation.Cassandra.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.Cassandra.Tests/OpenTelemetry.Instrumentation.Cassandra.Tests.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
       <TargetFrameworks>$(SupportedNetTargets)</TargetFrameworks>
       <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net462</TargetFrameworks>
+      <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
 
