--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -232,7 +232,17 @@ jobs:
     uses: ./.github/workflows/Component.BuildTest.yml
     with:
       project-name: Component[OpenTelemetry.Instrumentation.ConfluentKafka]
-      code-cov-name: Instrumentation.ConfluentKafka          
+      code-cov-name: Instrumentation.ConfluentKafka
+
+  build-test-instrumentation-confluentkafka-integration:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'instrumentation-confluentkafka')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/integration.yml
+    with:
+      job: kafka-integration-test
 
   build-test-instrumentation-elasticsearchclient:
     needs: detect-changes
@@ -387,6 +397,8 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'build')
       || contains(needs.detect-changes.outputs.changes, 'shared')
     uses: ./.github/workflows/integration.yml
+    with:
+      job: redis-integration-test
 
   build-test-instrumentation-wcf:
     needs: detect-changes
