--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         filters: |
           md: [ '**.md' ]
+          yml: [ '**.yml, '**.yaml' ]
           build: ['build/**', '.github/**/*.yml', '!.github/workflows/package-*', '**/*.targets', '**/*.props']
           shared: ['src/Shared/**', 'test/Shared/**']
           contrib-shared-tests: ['test/OpenTelemetry.Contrib.Shared.Tests/**']
@@ -67,6 +68,13 @@ jobs:
       contains(needs.detect-changes.outputs.changes, 'md')
       || contains(needs.detect-changes.outputs.changes, 'build')
     uses: ./.github/workflows/markdownlint.yml
+
+  lint-yml:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'yml')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+    uses: ./.github/workflows/yamllint.yml
 
   lint-dotnet-format:
     needs: detect-changes
