--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -44,6 +44,7 @@ on:
         - OpenTelemetry.Resources.Container
         - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Resources.Host
+        - OpenTelemetry.Resources.OperatingSystem
         - OpenTelemetry.Resources.Process
         - OpenTelemetry.Resources.ProcessRuntime
         - OpenTelemetry.Sampler.AWS
