--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -33,6 +33,8 @@ jobs:
         exclude:
         - os: ubuntu-latest
           version: net462
+        - os: macos-latest
+          version: net462
 
     runs-on: ${{ matrix.os }}
 
@@ -73,6 +75,11 @@ jobs:
 
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: |
+          6.0.x
+          7.0.x
+          8.0.x
 
     - name: dotnet restore ${{ steps.resolve-project.outputs.title }}
       run: dotnet restore ${{ steps.resolve-project.outputs.project }} -p:EnablePackageValidation=true
