Make access to proto compiled files public

--- a/src/OpenTelemetry.Proto/OpenTelemetry.Proto.csproj
+++ b/src/OpenTelemetry.Proto/OpenTelemetry.Proto.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="**/*.proto" Access="internal">
+    <Protobuf Include="**/*.proto" Access="public">
       <ProtoRoot>opentelemetry-proto</ProtoRoot>
     </Protobuf>
   </ItemGroup>
