Drop deprecated `otel.*` attributes for now
They don't have a brief which causes warnings with public API.
Will re-add once a new semconv release is out.

--- a/src/OpenTelemetry.SemanticConventions/scripts/templates/registry/weaver.yaml
+++ b/src/OpenTelemetry.SemanticConventions/scripts/templates/registry/weaver.yaml
@@ -2,7 +2,7 @@ params:
 
   # excluded attributes will be commented out in the generated code
   # this behavior is fully controlled by jinja templates
-  excluded_attributes: ["messaging.client_id"]
+  excluded_attributes: ["messaging.client_id", "otel.library.name", "otel.library.version"]
 
 whitespace_control:
   trim_blocks: true
@@ -32,7 +32,7 @@ templates:
       }) | map({
           root_namespace: .root_namespace,
           attributes: .attributes,
-          excluded_attributes: $excluded_attributes[]
+          excluded_attributes: $excluded_attributes
       })
     application_mode: each
 
