Replace net462 with $(NetFrameworkMinimumSupportedVersion)

--- a/examples/owin/Examples.Owin.csproj
+++ b/examples/owin/Examples.Owin.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>$(NetFrameworkMinimumSupportedVersion)</TargetFramework>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
