--- a/examples/wcf/client-netframework/Examples.Wcf.Client.NetFramework.csproj
+++ b/examples/wcf/client-netframework/Examples.Wcf.Client.NetFramework.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFramework>$(NetFrameworkMinimumSupportedVersion)</TargetFramework>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
